--- a/index.html
+++ b/index.html
@@ -49,40 +49,40 @@
           </svg>
         </button>
 
-        <div class="header__container" id="header__container" data-menu>
-          <nav>
-            <ul class="list header__nav-list">
-              <li class="header__nav-item">
-                <a class="header__nav-link header__nav-link--current" href="">Студия</a>
-              </li>
-              <li class="header__nav-item">
-                <a class="header__nav-link" href="./portfolio.html">Портфолио</a>
-              </li>
-              <li class="header__nav-item"><a class="header__nav-link" href="">Контакты</a></li>
-            </ul>
-          </nav>
+        <div class="header__container" id="header__container" data-menu></div>
 
-          <!-- Контакты -->
-
-          <ul class="list header__contact-list">
-            <li class="header__contact-item">
-              <a class="header__contact-link" href="mailto:info@devstudio.com">
-                <svg class="header__contact-icon" width="16" height="12">
-                  <use href="./images/sprite.svg#envelope"></use>
-                </svg>
-                info@devstudio.com</a
-              >
+        <nav>
+          <ul class="list header__nav-list">
+            <li class="header__nav-item">
+              <a class="header__nav-link header__nav-link--current" href="">Студия</a>
             </li>
-            <li class="header__contact-item">
-              <a class="header__contact-link" href="tel:+380961111111">
-                <svg class="header__contact-icon" width="10" height="16">
-                  <use href="./images/sprite.svg#smartphone"></use>
-                </svg>
-                +38 096 111 11 11</a
-              >
+            <li class="header__nav-item">
+              <a class="header__nav-link" href="./portfolio.html">Портфолио</a>
             </li>
+            <li class="header__nav-item"><a class="header__nav-link" href="">Контакты</a></li>
           </ul>
-        </div>
+        </nav>
+
+        <!-- Контакты -->
+
+        <ul class="list header__contact-list">
+          <li class="header__contact-item">
+            <a class="header__contact-link" href="mailto:info@devstudio.com">
+              <svg class="header__contact-icon" width="16" height="12">
+                <use href="./images/sprite.svg#envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
+          </li>
+          <li class="header__contact-item">
+            <a class="header__contact-link" href="tel:+380961111111">
+              <svg class="header__contact-icon" width="10" height="16">
+                <use href="./images/sprite.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
 
