--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <ul class="list header__contact-list">
           <li class="header__contact-item">
             <a class="header__contact-link" href="mailto:info@devstudio.com">
-              <svg class="header__contact-icon" width="16" height="12">
+              <svg class="header__contact-icon-mail" width="16" height="12">
                 <use href="./images/sprite.svg#envelope"></use>
               </svg>
               info@devstudio.com</a
@@ -122,7 +122,7 @@
           </li>
           <li class="header__contact-item">
             <a class="header__contact-link" href="tel:+380961111111">
-              <svg class="header__contact-icon" width="10" height="16">
+              <svg class="header__contact-icon-tel" width="10" height="16">
                 <use href="./images/sprite.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -538,7 +538,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="subscribe">
           <h2 class="subscribe-title">подпишитесь на рассылку</h2>
           <form class="subscribe__form-email" name="email-form" autocomplete="on">
             <label class="subscribe__field-email">
