--- a/index.html
+++ b/index.html
@@ -249,7 +249,22 @@
           <h2 class="team-section__title">Наша команда</h2>
           <ul class="list team-section__list">
             <li class="team-section__item">
-              <img src="./images/section-2/img.jpg" alt="фото" width="270" />
+              <img
+                srcset="
+                  ./images/mobile-first/team/optimized/W/team-1_lg-270.jpg    270w,
+                  ./images/mobile-first/team/optimized/W/team-1_md-354.jpg    354w,
+                  ./images/mobile-first/team/optimized/W/team-1_sm-450.jpg    450w,
+                  ./images/mobile-first/team/optimized/W/team-1_lg@2x-540.jpg 540w,
+                  ./images/mobile-first/team/optimized/W/team-1_md@2x-708.jpg 708w,
+                  ./images/mobile-first/team/optimized/W/team-1_sm@2x-900.jpg 900w
+                "
+                sizes="(min-width 1200) 270px, (min-width 768) 354px, (max-width 767) 450px, 100vw"
+                src="./images/mobile-first/team/optimized/W/team-1_sm-450.jpg"
+                alt="фото"
+                width="450"
+                height="460"
+              />
+
               <div class="team-section__person">
                 <h3 class="team-section__name">Игорь Демьяненко</h3>
                 <p class="team-section__profession" lang="en">Product Designer</p>
@@ -291,7 +306,21 @@
             </li>
 
             <li class="team-section__item">
-              <img src="./images/section-2/img-1.jpg" alt="фото" width="270" />
+              <img
+                srcset="
+                  ./images/mobile-first/team/optimized/W/team-2_lg-270.jpg    270w,
+                  ./images/mobile-first/team/optimized/W/team-2_md-354.jpg    354w,
+                  ./images/mobile-first/team/optimized/W/team-2_sm-450.jpg    450w,
+                  ./images/mobile-first/team/optimized/W/team-2_lg@2x-540.jpg 540w,
+                  ./images/mobile-first/team/optimized/W/team-2_md@2x-708.jpg 708w,
+                  ./images/mobile-first/team/optimized/W/team-2_sm@2x-900.jpg 900w
+                "
+                sizes="(min-width 1200) 270px, (min-width 768) 354px, (max-width 767) 450px, 100vw"
+                src="./images/mobile-first/team/optimized/W/team-2_sm-450.jpg"
+                alt="фото"
+                width="450"
+                height="460"
+              />
               <div class="team-section__person">
                 <h3 class="team-section__name">Ольга Репина</h3>
                 <p class="team-section__profession" lang="en">Frontend Developer</p>
@@ -339,7 +368,21 @@
             </li>
 
             <li class="team-section__item">
-              <img src="./images/section-2/img-2.jpg" alt="фото" width="270" />
+              <img
+                srcset="
+                  ./images/mobile-first/team/optimized/W/team-3_lg-270.jpg    270w,
+                  ./images/mobile-first/team/optimized/W/team-3_md-354.jpg    354w,
+                  ./images/mobile-first/team/optimized/W/team-3_sm-450.jpg    450w,
+                  ./images/mobile-first/team/optimized/W/team-3_lg@2x-540.jpg 540w,
+                  ./images/mobile-first/team/optimized/W/team-3_md@2x-708.jpg 708w,
+                  ./images/mobile-first/team/optimized/W/team-3_sm@2x-900.jpg 900w
+                "
+                sizes="(min-width 1200) 270px, (min-width 768) 354px, (max-width 767) 450px, 100vw"
+                src="./images/mobile-first/team/optimized/W/team-3_sm-450.jpg"
+                alt="фото"
+                width="450"
+                height="460"
+              />
               <div class="team-section__person">
                 <h3 class="team-section__name">Николай Тарасов</h3>
                 <p class="team-section__profession" lang="en">Marketing</p>
@@ -380,7 +423,21 @@
               </div>
             </li>
             <li class="team-section__item">
-              <img src="./images/section-2/img-3.jpg" alt="фото" width="270" />
+              <img
+                srcset="
+                  ./images/mobile-first/team/optimized/W/team-4_lg-270.jpg    270w,
+                  ./images/mobile-first/team/optimized/W/team-4_md-354.jpg    354w,
+                  ./images/mobile-first/team/optimized/W/team-4_sm-450.jpg    450w,
+                  ./images/mobile-first/team/optimized/W/team-4_lg@2x-540.jpg 540w,
+                  ./images/mobile-first/team/optimized/W/team-4_md@2x-708.jpg 708w,
+                  ./images/mobile-first/team/optimized/W/team-4_sm@2x-900.jpg 900w
+                "
+                sizes="(min-width 1200) 270px, (min-width 768) 354px, (max-width 767) 450px, 100vw"
+                src="./images/mobile-first/team/optimized/W/team-4_sm-450.jpg"
+                alt="фото"
+                width="450"
+                height="460"
+              />
               <div class="team-section__person">
                 <h3 class="team-section__name">Михаил Ермаков</h3>
                 <p class="team-section__profession" lang="en">UI Designer</p>
