--- a/portfolio.html
+++ b/portfolio.html
@@ -31,17 +31,13 @@
         >
 
         <button
-          class="header__button"
+          class="header__button js-open-menu"
           type="button"
           aria-expanded="false"
           aria-controls="mobile-menu"
           data-menu-button
         >
           <svg width="40" height="40" aria-label="Переключатель мобильного меню">
-            <use
-              class="header__button header__button--cross"
-              href="./images/sprite.svg#icon-close_40px"
-            ></use>
             <use
               class="header__button header__button--menu"
               href="./images/sprite.svg#icon-menu_40px"
@@ -50,7 +46,15 @@
         </button>
 
         <!-- mobile menu -->
-        <div class="mobile-menu" id="mobile-menu" data-menu>
+        <div class="mobile-menu js-menu-container" id="mobile-menu" data-menu>
+          <button class="header__button js-close-menu" type="button">
+            <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+              <use
+                class="header__button header__button--cross"
+                href="./images/sprite.svg#icon-close_40px"
+              ></use>
+            </svg>
+          </button>
           <ul class="mobile-menu__nav list">
             <li class="mobile-menu__nav-item">
               <a href="./index.html" class="mobile-menu__nav-link">Студия</a>
@@ -700,6 +704,13 @@
       </div>
     </footer>
 
-    <script src="./js/menu.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/mobile-menu.js"></script>
+    <!-- <script src="./js/menu.js"></script> -->
   </body>
 </html>
