Исправил по первой записи от Сергея
Без картинок по портфолио, пока не пойму в чем проблема

--- a/index.html
+++ b/index.html
@@ -212,7 +212,11 @@
           <ul class="list activity-section__list">
             <li class="activity-section__item">
               <img
-                src="./images/section-1/img.jpg"
+                srcset="
+                  ./images/mobile-first/activity/optimized/img-min.jpg    1x,
+                  ./images/mobile-first/activity/optimized/img@2x-min.jpg 2x
+                "
+                src="./images/mobile-first/activity/optimized/img-min.jpg"
                 alt="програмист на рабочем месте"
                 width="370"
                 height="294"
@@ -223,7 +227,11 @@
             </li>
             <li class="activity-section__item">
               <img
-                src="./images/section-1/img-1.jpg"
+                srcset="
+                  ./images/mobile-first/activity/optimized/img-1-min.jpg    1x,
+                  ./images/mobile-first/activity/optimized/img@2x-1-min.jpg 2x
+                "
+                src="./images/mobile-first/activity/optimized/img-1-min.jpg"
                 alt="разработка приложений на смартфоны"
                 width="370"
                 height="294"
@@ -234,7 +242,11 @@
             </li>
             <li class="activity-section__item">
               <img
-                src="./images/section-1/img-2.jpg"
+                srcset="
+                  ./images/mobile-first/activity/optimized/img-2-min.jpg    1x,
+                  ./images/mobile-first/activity/optimized/img@2x-2-min.jpg 2x
+                "
+                src="./images/mobile-first/activity/optimized/img-2-min.jpg"
                 alt="веб-дизайн на планшете"
                 width="370"
                 height="294"
