--- a/index.html
+++ b/index.html
@@ -80,19 +80,13 @@
 
           <ul class="mobile-menu__socials list">
             <li class="mobile-menu__socials-item">
-              <a href="" class="mobile-menu__socials-link"
-                >Instagram <span class="mobile-menu__socials-link-devider">|</span></a
-              >
+              <a href="" class="mobile-menu__socials-link">Instagram </a>
             </li>
             <li class="mobile-menu__socials-item">
-              <a href="" class="mobile-menu__socials-link"
-                >Twitter <span class="mobile-menu__socials-link-devider">|</span></a
-              >
+              <a href="" class="mobile-menu__socials-link">Twitter </a>
             </li>
             <li class="mobile-menu__socials-item">
-              <a href="" class="mobile-menu__socials-link"
-                >Facebook <span class="mobile-menu__socials-link-devider">|</span></a
-              >
+              <a href="" class="mobile-menu__socials-link">Facebook </a>
             </li>
             <li class="mobile-menu__socials-item">
               <a href="" class="mobile-menu__socials-link">LinkedIn </a>
