--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                   ./images/mobile-first/team/optimized/W/team-1_md@2x-708.jpg 708w,
                   ./images/mobile-first/team/optimized/W/team-1_sm@2x-900.jpg 900w
                 "
-                sizes="(min-width 1200px) 270px, (min-width 768px) 354px, (max-width 767px) 450px, 100vw"
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width: 767px) 450px, 100vw"
                 src="./images/mobile-first/team/optimized/W/team-1_sm-450.jpg"
                 alt="фото"
                 width="450"
@@ -326,7 +326,7 @@
                   ./images/mobile-first/team/optimized/W/team-2_md@2x-708.jpg 708w,
                   ./images/mobile-first/team/optimized/W/team-2_sm@2x-900.jpg 900w
                 "
-                sizes="(min-width 1200) 270px, (min-width 768) 354px, (max-width 767) 450px, 100vw"
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width: 767px) 450px, 100vw"
                 src="./images/mobile-first/team/optimized/W/team-2_sm-450.jpg"
                 alt="фото"
                 width="450"
@@ -388,7 +388,7 @@
                   ./images/mobile-first/team/optimized/W/team-3_md@2x-708.jpg 708w,
                   ./images/mobile-first/team/optimized/W/team-3_sm@2x-900.jpg 900w
                 "
-                sizes="(min-width 1200) 270px, (min-width 768) 354px, (max-width 767) 450px, 100vw"
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width: 767px) 450px, 100vw"
                 src="./images/mobile-first/team/optimized/W/team-3_sm-450.jpg"
                 alt="фото"
                 width="450"
@@ -443,7 +443,7 @@
                   ./images/mobile-first/team/optimized/W/team-4_md@2x-708.jpg 708w,
                   ./images/mobile-first/team/optimized/W/team-4_sm@2x-900.jpg 900w
                 "
-                sizes="(min-width 1200) 270px, (min-width 768) 354px, (max-width 767) 450px, 100vw"
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width: 767px) 450px, 100vw"
                 src="./images/mobile-first/team/optimized/W/team-4_sm-450.jpg"
                 alt="фото"
                 width="450"
