ВСЕ! (опечатка widht)

--- a/portfolio.html
+++ b/portfolio.html
@@ -80,19 +80,13 @@
 
           <ul class="mobile-menu__socials list">
             <li class="mobile-menu__socials-item">
-              <a href="" class="mobile-menu__socials-link"
-                >Instagram <span class="mobile-menu__socials-link-devider">|</span></a
-              >
+              <a href="" class="mobile-menu__socials-link">Instagram </a>
             </li>
             <li class="mobile-menu__socials-item">
-              <a href="" class="mobile-menu__socials-link"
-                >Twitter <span class="mobile-menu__socials-link-devider">|</span></a
-              >
+              <a href="" class="mobile-menu__socials-link">Twitter </a>
             </li>
             <li class="mobile-menu__socials-item">
-              <a href="" class="mobile-menu__socials-link"
-                >Facebook <span class="mobile-menu__socials-link-devider">|</span></a
-              >
+              <a href="" class="mobile-menu__socials-link">Facebook </a>
             </li>
             <li class="mobile-menu__socials-item">
               <a href="" class="mobile-menu__socials-link">LinkedIn </a>
@@ -164,18 +158,18 @@
               <a class="portfolio-link" href="">
                 <div class="portfolio-link__image">
                   <picture>
-                    <!-- mobile -->
+                    <!-- desktop -->
                     <source
-                      media="(max-widht: 767px)"
+                      media="(min-width: 1200px)"
                       srcset="
-                        ./images/mobile-first/portfolio/optimized/portfolio-1_sm-min.jpg    1x,
-                        ./images/mobile-first/portfolio/optimized/portfolio-1_sm@2x-min.jpg 2x
+                        ./images/mobile-first/portfolio/optimized/portfolio-1_lg-min.jpg    1x,
+                        ./images/mobile-first/portfolio/optimized/portfolio-1_lg@2x-min.jpg 2x
                       "
                       type="image/jpg"
                     />
                     <!-- tablet -->
                     <source
-                      media="(min-widht: 768px)"
+                      media="(min-width: 768px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-1_md-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-1_md@2x-min.jpg 2x
@@ -183,12 +177,12 @@
                       type="image/jpg"
                     />
 
-                    <!-- desktop -->
+                    <!-- mobile -->
                     <source
-                      media="(min-widht: 1200px)"
+                      media="(max-width: 767px)"
                       srcset="
-                        ./images/mobile-first/portfolio/optimized/portfolio-1_lg-min.jpg    1x,
-                        ./images/mobile-first/portfolio/optimized/portfolio-1_lg@2x-min.jpg 2x
+                        ./images/mobile-first/portfolio/optimized/portfolio-1_sm-min.jpg    1x,
+                        ./images/mobile-first/portfolio/optimized/portfolio-1_sm@2x-min.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -219,7 +213,7 @@
                   <picture>
                     <!-- desktop -->
                     <source
-                      media="(min-widht: 1200px)"
+                      media="(min-width: 1200px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-2_lg-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-2_lg@2x-min.jpg 2x
@@ -228,7 +222,7 @@
                     />
                     <!-- tablet -->
                     <source
-                      media="(min-widht: 768px)"
+                      media="(min-width: 768px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-2_md-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-2_md@2x-min.jpg 2x
@@ -237,7 +231,7 @@
                     />
                     <!-- mobile -->
                     <source
-                      media="(max-widht: 767px)"
+                      media="(max-width: 767px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-2_sm-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-2_sm@2x-min.jpg 2x
@@ -272,7 +266,7 @@
                   <picture>
                     <!-- desktop -->
                     <source
-                      media="(min-widht: 1200px)"
+                      media="(min-width: 1200px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-3_lg-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-3_lg@2x-min.jpg 2x
@@ -281,7 +275,7 @@
                     />
                     <!-- tablet -->
                     <source
-                      media="(min-widht: 768px)"
+                      media="(min-width: 768px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-3_md-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-3_md@2x-min.jpg 2x
@@ -290,7 +284,7 @@
                     />
                     <!-- mobile -->
                     <source
-                      media="(max-widht: 767px)"
+                      media="(max-width: 767px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-3_sm-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-3_sm@2x-min.jpg 2x
@@ -323,7 +317,7 @@
                   <picture>
                     <!-- desktop -->
                     <source
-                      media="(min-widht: 1200px)"
+                      media="(min-width: 1200px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-4_lg-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-4_lg@2x-min.jpg 2x
@@ -332,7 +326,7 @@
                     />
                     <!-- tablet -->
                     <source
-                      media="(min-widht: 768px)"
+                      media="(min-width: 768px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-4_md-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-4_md@2x-min.jpg 2x
@@ -341,7 +335,7 @@
                     />
                     <!-- mobile -->
                     <source
-                      media="(max-widht: 767px)"
+                      media="(max-width: 767px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-4_sm-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-4_sm@2x-min.jpg 2x
@@ -374,7 +368,7 @@
                   <picture>
                     <!-- desktop -->
                     <source
-                      media="(min-widht: 1200px)"
+                      media="(min-width: 1200px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-5_lg-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-5_lg@2x-min.jpg 2x
@@ -383,7 +377,7 @@
                     />
                     <!-- tablet -->
                     <source
-                      media="(min-widht: 768px)"
+                      media="(min-width: 768px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-5_md-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-5_md@2x-min.jpg 2x
@@ -392,7 +386,7 @@
                     />
                     <!-- mobile -->
                     <source
-                      media="(max-widht: 767px)"
+                      media="(max-width: 767px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-5_sm-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-5_sm@2x-min.jpg 2x
@@ -425,7 +419,7 @@
                   <picture>
                     <!-- desktop -->
                     <source
-                      media="(min-widht: 1200px)"
+                      media="(min-width: 1200px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-6_lg-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-6_lg@2x-min.jpg 2x
@@ -434,7 +428,7 @@
                     />
                     <!-- tablet -->
                     <source
-                      media="(min-widht: 768px)"
+                      media="(min-width: 768px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-6_md-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-6_md@2x-min.jpg 2x
@@ -443,7 +437,7 @@
                     />
                     <!-- mobile -->
                     <source
-                      media="(max-widht: 767px)"
+                      media="(max-width: 767px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-6_sm-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-6_sm@2x-min.jpg 2x
@@ -476,7 +470,7 @@
                   <picture>
                     <!-- desktop -->
                     <source
-                      media="(min-widht: 1200px)"
+                      media="(min-width: 1200px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-7_lg-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-7_lg@2x-min.jpg 2x
@@ -485,7 +479,7 @@
                     />
                     <!-- tablet -->
                     <source
-                      media="(min-widht: 768px)"
+                      media="(min-width: 768px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-7_md-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-7_md@2x-min.jpg 2x
@@ -494,7 +488,7 @@
                     />
                     <!-- mobile -->
                     <source
-                      media="(max-widht: 767px)"
+                      media="(max-width: 767px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-7_sm-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-7_sm@2x-min.jpg 2x
@@ -529,7 +523,7 @@
                   <picture>
                     <!-- desktop -->
                     <source
-                      media="(min-widht: 1200px)"
+                      media="(min-width: 1200px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-8_lg-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-8_lg@2x-min.jpg 2x
@@ -538,7 +532,7 @@
                     />
                     <!-- tablet -->
                     <source
-                      media="(min-widht: 768px)"
+                      media="(min-width: 768px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-8_md-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-8_md@2x-min.jpg 2x
@@ -547,7 +541,7 @@
                     />
                     <!-- mobile -->
                     <source
-                      media="(max-widht: 767px)"
+                      media="(max-width: 767px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-8_sm-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-8_sm@2x-min.jpg 2x
@@ -580,7 +574,7 @@
                   <picture>
                     <!-- desktop -->
                     <source
-                      media="(min-widht: 1200px)"
+                      media="(min-width: 1200px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-9_lg-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-9_lg@2x-min.jpg 2x
@@ -589,7 +583,7 @@
                     />
                     <!-- tablet -->
                     <source
-                      media="(min-widht: 768px)"
+                      media="(min-width: 768px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-9_md-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-9_md@2x-min.jpg 2x
@@ -598,7 +592,7 @@
                     />
                     <!-- mobile -->
                     <source
-                      media="(max-widht: 767px)"
+                      media="(max-width: 767px)"
                       srcset="
                         ./images/mobile-first/portfolio/optimized/portfolio-9_sm-min.jpg    1x,
                         ./images/mobile-first/portfolio/optimized/portfolio-9_sm@2x-min.jpg 2x
